# CS550

./: .gitignore  CMakeLists.txt  CS550_evan.collier_process-paper.docx  CS550_evelyn.collier_process-paper.docx  Convex Rigid Body Simulation with Sequential Impulses.pptx  README.md  Slides-And-Video-Links.txt  Technical_Design_Doc.docx
CS550_evan.collier_physics-sim/dep/assimp/: CMakeLists.txt
CS550_evan.collier_physics-sim/dep/glfw-3.2.1/: CMakeLists.txt
CS550_evan.collier_physics-sim/src/: CMakeLists.txt
CS550_evan.collier_physics-sim/src/Core/: Engine.cpp
CS550_evan.collier_physics-sim/src/Core/Threading/: JobHandle.cpp  JobHandle.hpp
CS550_evan.collier_physics-sim/src/Graphics/: GraphicsSystem.hpp  Shader.hpp
CS550_evan.collier_physics-sim/src/Physics/: AABBTree.hpp  Collider.cpp  Collider.hpp  ContactResolver.hpp  GJK.cpp  GJK.hpp
CS550_evelyn.collier_physics-sim/: README.md
CS550_evelyn.collier_physics-sim/assets/shaders/: debug.frag  simple.frag
CS550_evelyn.collier_physics-sim/cmake/: listSubDirs.cmake
CS550_evelyn.collier_physics-sim/dep/glad/: CMakeLists.txt
CS550_evelyn.collier_physics-sim/dep/glad/include/glad/: glad.h
CS550_evelyn.collier_physics-sim/dep/imgui/: CMakeLists.txt  imgui_impl_glfw_gl3.cpp
CS550_evelyn.collier_physics-sim/src/Core/: Engine.hpp  Object.cpp  Object.hpp
CS550_evelyn.collier_physics-sim/src/Core/Threading/: Job.hpp  JobQueue.cpp  JobQueue.hpp
CS550_evelyn.collier_physics-sim/src/Graphics/: Camera.cpp  Camera.hpp  Model.hpp
CS550_evelyn.collier_physics-sim/src/Math/: BarycentricCoords.cpp
CS550_evelyn.collier_physics-sim/src/Physics/: AABB.cpp  AABB.hpp  AABBTree.cpp  ContactManifold.cpp  ContactManifold.hpp  ContactResolver.cpp  EPA.cpp  Polytope.cpp  RigidBody.hpp  Simplex.cpp  SupportShape.cpp
assets/shaders/: debug.frag
cmake/: sourceGroup.cmake
dep/: CMakeLists.txt
dep/assimp/: CMakeLists.txt
dep/glad/src/: glad.c
dep/glm-0.9.8.0/: CMakeLists.txt
resources/: Code Review II.docx  Student_CodeReview_III.docx  books I should add.txt  concave.txt  websites.txt
src/: CMakeLists.txt  Utilities.hpp  fs.hpp  main.cpp
src/Core/: Engine.cpp  Engine.hpp  EventHandler.cpp  EventHandler.hpp  Object.cpp  Object.hpp
src/Core/Threading/: Job.cpp  JobHandle.cpp  JobHandle.hpp  JobSystem.cpp  JobSystem.hpp  Worker.cpp  Worker.hpp
src/Editor/: EditorSystem.cpp  EditorSystem.hpp
src/Graphics/: Camera.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  Mesh.cpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp
src/Math/: BarycentricCoords.cpp  BarycentricCoords.hpp
src/Physics/: AABB.cpp  AABB.hpp  AABBTree.cpp  AABBTree.hpp  Collider.cpp  Collider.hpp  ContactManifold.cpp  ContactManifold.hpp  ContactResolver.cpp  ContactResolver.hpp  EPA.cpp  EPA.hpp  GJK.cpp  GJK.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  Polytope.cpp  Polytope.hpp  RigidBody.cpp  RigidBody.hpp  Simplex.cpp  Simplex.hpp  SupportShape.cpp  SupportShape.hpp
src/Standard/: BlockAllocator.hpp  Delegate.hpp  IntrusiveList.hpp
